# nest

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SECURITY.md  test_json.txt
.github/workflows/: ci.yml
.opencode/: opencode.json
.opencode/skills/skill-refiner/: SKILL.md
crates/nest-api/: Cargo.toml
crates/nest-api/src/: agent.rs  audit.rs  constant_time.rs  error.rs  jitter.rs  lib.rs  message.rs  path.rs  permission.rs  ratelimit.rs  sandbox.rs  scheduler.rs  signing.rs  ssrf.rs  subprocess.rs  taint.rs
crates/nest-audit/: Cargo.toml
crates/nest-audit/src/: lib.rs
crates/nest-llm/: Cargo.toml
crates/nest-llm/src/: lib.rs  model_catalog.rs  prompt_hash.rs  repair.rs  sanitize.rs
crates/nest-messaging/: Cargo.toml
crates/nest-messaging/src/: lib.rs
crates/nest-permissions/: Cargo.toml
crates/nest-permissions/src/: lib.rs
crates/nest-runtime/: Cargo.toml
crates/nest-runtime/src/: depth_guard.rs  hand.rs  lib.rs  loop_guard.rs  scheduler.rs
crates/nest-sandbox/: Cargo.toml
crates/nest-sandbox/src/: hardening.rs  lib.rs  metering.rs  sandbox.rs  time.rs
crates/nest-tools/: Cargo.toml
crates/nest-tools/src/: lib.rs  mcp.rs
docs/: ADVANCED_SECURITY.md  API.md  ARCHITECTURE.md  DEVELOPMENT.md  GETTING_STARTED.md  SECURITY_GAPS.md
examples/: demo-agent.rs
hands/: researcher.toml
hands/researcher/: Cargo.toml
hands/researcher/src/: lib.rs
src/: banner.rs  main.rs
tools/filesystem/: Cargo.toml
tools/filesystem/src/: main.rs
tools/web_fetch/: Cargo.toml
tools/web_fetch/src/: main.rs
tools/web_search/: Cargo.toml
tools/web_search/src/: main.rs
