[package]
name = "nest-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core API traits for Nest hypervisor"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
governor = { workspace = true }
nonzero_ext = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
tempfile = "3.27"