[package]
name = "nest-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Immutable Merkle chain audit log for Nest agent hypervisor"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
