[package]
name = "nest-llm"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
description = "LLM provider integration for Nest agent hypervisor"

[dependencies]
nest-api = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"
