[package]
name = "nest-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nest-api.workspace = true
nest-permissions.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["codec"] }
serde.workspace = true
serde_json.workspace = true
