[package]
name = "nest-tool-web-search"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "io-util", "net", "io-std"] }
anyhow = "1.0"
nest-api = { path = "../../crates/nest-api" }
